--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <version>1.0.1.Final</version>
+        </dependency>
+
     </dependencies>
 
 </project>
